# s21_cpp_calc

./: README.md
src/: CMakeLists.txt  main.cc  makefile
src/assets/: style.ss
src/controller/: controller.h
src/docs/dvi/: Doxyfile
src/docs/html/: Doxyfile
src/model/: Calculator.cc  badexpression.h  calculator.cc  calculator.h  defaultmodel.h  icalculationmodel.h  model_interface.h  tokenizer.cc  tokenizer.h  translator.cc  translator.h
src/tests/: ModelTest.cc  modeltest.cc  tokenizertest.cc
src/view/: assets.qrc  icalculatorview.h  mainwindow.cc  mainwindow.h  mainwindow.ui  view_interface.h
